reflect change in github url (#496)
Project was moved from the incubator to the Zalando main org, hence the rename

--- a/delivery.yaml
+++ b/delivery.yaml
@@ -4,7 +4,7 @@ pipeline:
       type: script
       env:
         GOPATH: /root/go
-        OPERATOR_TOP_DIR: /root/go/src/github.com/zalando-incubator
+        OPERATOR_TOP_DIR: /root/go/src/github.com/zalando
       commands:
         - desc: 'Update'
           cmd: |
